Adding new secret with backend_url (very fancy)

--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
-    "build": {
-      "env": {
-        "REACT_APP_BACKEND_URL": "@https://hernan-minesweeper-backend.mybluemix.net/minesweeper/"
-      }
+  "build": {
+    "env": {
+      "REACT_APP_BACKEND_URL": "@backend_url"
     }
   }
+}
